src/parser/blendReact/src/grammar/BlendReactParser.ts
// Generated from src/grammar/BlendReact.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { BlendReactListener } from "./BlendReactListener";

export class BlendReactParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly PATH_IDENTIFIER = 13;
	public static readonly IDENTIFIER = 14;
	public static readonly CAPITAL_IDENTIFIER = 15;
	public static readonly WS = 16;
	public static readonly RULE_program = 0;
	public static readonly RULE_moduleDefinition = 1;
	public static readonly RULE_screenDefenition = 2;
	public static readonly RULE_componentDefenition = 3;
	public static readonly RULE_layoutDefinition = 4;
	public static readonly RULE_pageDefinition = 5;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "moduleDefinition", "screenDefenition", "componentDefenition", 
		"layoutDefinition", "pageDefinition",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'module'", "'screen'", "','", "'under'", "'component'", "'layout'", 
		"'('", "')'", "'{'", "'}'", "'page'", "'view'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "PATH_IDENTIFIER", 
		"IDENTIFIER", "CAPITAL_IDENTIFIER", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(BlendReactParser._LITERAL_NAMES, BlendReactParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return BlendReactParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "BlendReact.g4"; }

	// @Override
	public get ruleNames(): string[] { return BlendReactParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return BlendReactParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(BlendReactParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, BlendReactParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 12;
			this.moduleDefinition();
			this.state = 16;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === BlendReactParser.T__4) {
				{
				{
				this.state = 13;
				this.componentDefenition();
				}
				}
				this.state = 18;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 22;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === BlendReactParser.T__1) {
				{
				{
				this.state = 19;
				this.screenDefenition();
				}
				}
				this.state = 24;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 28;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === BlendReactParser.T__5) {
				{
				{
				this.state = 25;
				this.layoutDefinition();
				}
				}
				this.state = 30;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public moduleDefinition(): ModuleDefinitionContext {
		let _localctx: ModuleDefinitionContext = new ModuleDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, BlendReactParser.RULE_moduleDefinition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 31;
			this.match(BlendReactParser.T__0);
			this.state = 32;
			this.match(BlendReactParser.CAPITAL_IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public screenDefenition(): ScreenDefenitionContext {
		let _localctx: ScreenDefenitionContext = new ScreenDefenitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, BlendReactParser.RULE_screenDefenition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 34;
			this.match(BlendReactParser.T__1);
			this.state = 35;
			this.match(BlendReactParser.CAPITAL_IDENTIFIER);
			this.state = 40;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === BlendReactParser.T__2) {
				{
				{
				this.state = 36;
				this.match(BlendReactParser.T__2);
				this.state = 37;
				this.match(BlendReactParser.CAPITAL_IDENTIFIER);
				}
				}
				this.state = 42;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 43;
			this.match(BlendReactParser.T__3);
			this.state = 44;
			this.match(BlendReactParser.PATH_IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public componentDefenition(): ComponentDefenitionContext {
		let _localctx: ComponentDefenitionContext = new ComponentDefenitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, BlendReactParser.RULE_componentDefenition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 46;
			this.match(BlendReactParser.T__4);
			this.state = 47;
			this.match(BlendReactParser.CAPITAL_IDENTIFIER);
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === BlendReactParser.T__2) {
				{
				{
				this.state = 48;
				this.match(BlendReactParser.T__2);
				this.state = 49;
				this.match(BlendReactParser.CAPITAL_IDENTIFIER);
				}
				}
				this.state = 54;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 55;
			this.match(BlendReactParser.T__3);
			this.state = 56;
			this.match(BlendReactParser.PATH_IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public layoutDefinition(): LayoutDefinitionContext {
		let _localctx: LayoutDefinitionContext = new LayoutDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, BlendReactParser.RULE_layoutDefinition);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 58;
			this.match(BlendReactParser.T__5);
			this.state = 59;
			this.match(BlendReactParser.CAPITAL_IDENTIFIER);
			this.state = 60;
			this.match(BlendReactParser.T__6);
			this.state = 61;
			this.match(BlendReactParser.PATH_IDENTIFIER);
			this.state = 62;
			this.match(BlendReactParser.T__7);
			this.state = 63;
			this.match(BlendReactParser.T__8);
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === BlendReactParser.T__10) {
				{
				{
				this.state = 64;
				this.pageDefinition();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === BlendReactParser.T__5) {
				{
				{
				this.state = 70;
				this.layoutDefinition();
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 76;
			this.match(BlendReactParser.T__9);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pageDefinition(): PageDefinitionContext {
		let _localctx: PageDefinitionContext = new PageDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, BlendReactParser.RULE_pageDefinition);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(BlendReactParser.T__10);
			this.state = 79;
			this.match(BlendReactParser.CAPITAL_IDENTIFIER);
			this.state = 80;
			this.match(BlendReactParser.T__6);
			this.state = 81;
			this.match(BlendReactParser.PATH_IDENTIFIER);
			this.state = 82;
			this.match(BlendReactParser.T__7);
			this.state = 83;
			this.match(BlendReactParser.T__11);
			this.state = 84;
			this.match(BlendReactParser.T__6);
			this.state = 85;
			this.match(BlendReactParser.CAPITAL_IDENTIFIER);
			this.state = 86;
			this.match(BlendReactParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!BlendReactParser.__ATN) {
			BlendReactParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(BlendReactParser._serializedATN));
		}

		return BlendReactParser.__ATN;
	}

}

export class ProgramContext extends ParserRuleContext {
	public moduleDefinition(): ModuleDefinitionContext {
		return this.getRuleContext(0, ModuleDefinitionContext);
	}
	public componentDefenition(): ComponentDefenitionContext[];
	public componentDefenition(i: number): ComponentDefenitionContext;
	public componentDefenition(i?: number): ComponentDefenitionContext | ComponentDefenitionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ComponentDefenitionContext);
		} else {
			return this.getRuleContext(i, ComponentDefenitionContext);
		}
	}
	public screenDefenition(): ScreenDefenitionContext[];
	public screenDefenition(i: number): ScreenDefenitionContext;
	public screenDefenition(i?: number): ScreenDefenitionContext | ScreenDefenitionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ScreenDefenitionContext);
		} else {
			return this.getRuleContext(i, ScreenDefenitionContext);
		}
	}
	public layoutDefinition(): LayoutDefinitionContext[];
	public layoutDefinition(i: number): LayoutDefinitionContext;
	public layoutDefinition(i?: number): LayoutDefinitionContext | LayoutDefinitionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(LayoutDefinitionContext);
		} else {
			return this.getRuleContext(i, LayoutDefinitionContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BlendReactParser.RULE_program; }
	// @Override
	public enterRule(listener: BlendReactListener): void {
		if (listener.enterProgram) {
			listener.enterProgram(this);
		}
	}
	// @Override
	public exitRule(listener: BlendReactListener): void {
		if (listener.exitProgram) {
			listener.exitProgram(this);
		}
	}
}


export class ModuleDefinitionContext extends ParserRuleContext {
	public CAPITAL_IDENTIFIER(): TerminalNode { return this.getToken(BlendReactParser.CAPITAL_IDENTIFIER, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BlendReactParser.RULE_moduleDefinition; }
	// @Override
	public enterRule(listener: BlendReactListener): void {
		if (listener.enterModuleDefinition) {
			listener.enterModuleDefinition(this);
		}
	}
	// @Override
	public exitRule(listener: BlendReactListener): void {
		if (listener.exitModuleDefinition) {
			listener.exitModuleDefinition(this);
		}
	}
}


export class ScreenDefenitionContext extends ParserRuleContext {
	public CAPITAL_IDENTIFIER(): TerminalNode[];
	public CAPITAL_IDENTIFIER(i: number): TerminalNode;
	public CAPITAL_IDENTIFIER(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(BlendReactParser.CAPITAL_IDENTIFIER);
		} else {
			return this.getToken(BlendReactParser.CAPITAL_IDENTIFIER, i);
		}
	}
	public PATH_IDENTIFIER(): TerminalNode { return this.getToken(BlendReactParser.PATH_IDENTIFIER, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BlendReactParser.RULE_screenDefenition; }
	// @Override
	public enterRule(listener: BlendReactListener): void {
		if (listener.enterScreenDefenition) {
			listener.enterScreenDefenition(this);
		}
	}
	// @Override
	public exitRule(listener: BlendReactListener): void {
		if (listener.exitScreenDefenition) {
			listener.exitScreenDefenition(this);
		}
	}
}


export class ComponentDefenitionContext extends ParserRuleContext {
	public CAPITAL_IDENTIFIER(): TerminalNode[];
	public CAPITAL_IDENTIFIER(i: number): TerminalNode;
	public CAPITAL_IDENTIFIER(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(BlendReactParser.CAPITAL_IDENTIFIER);
		} else {
			return this.getToken(BlendReactParser.CAPITAL_IDENTIFIER, i);
		}
	}
	public PATH_IDENTIFIER(): TerminalNode { return this.getToken(BlendReactParser.PATH_IDENTIFIER, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BlendReactParser.RULE_componentDefenition; }
	// @Override
	public enterRule(listener: BlendReactListener): void {
		if (listener.enterComponentDefenition) {
			listener.enterComponentDefenition(this);
		}
	}
	// @Override
	public exitRule(listener: BlendReactListener): void {
		if (listener.exitComponentDefenition) {
			listener.exitComponentDefenition(this);
		}
	}
}


export class LayoutDefinitionContext extends ParserRuleContext {
	public CAPITAL_IDENTIFIER(): TerminalNode { return this.getToken(BlendReactParser.CAPITAL_IDENTIFIER, 0); }
	public PATH_IDENTIFIER(): TerminalNode { return this.getToken(BlendReactParser.PATH_IDENTIFIER, 0); }
	public pageDefinition(): PageDefinitionContext[];
	public pageDefinition(i: number): PageDefinitionContext;
	public pageDefinition(i?: number): PageDefinitionContext | PageDefinitionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(PageDefinitionContext);
		} else {
			return this.getRuleContext(i, PageDefinitionContext);
		}
	}
	public layoutDefinition(): LayoutDefinitionContext[];
	public layoutDefinition(i: number): LayoutDefinitionContext;
	public layoutDefinition(i?: number): LayoutDefinitionContext | LayoutDefinitionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(LayoutDefinitionContext);
		} else {
			return this.getRuleContext(i, LayoutDefinitionContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BlendReactParser.RULE_layoutDefinition; }
	// @Override
	public enterRule(listener: BlendReactListener): void {
		if (listener.enterLayoutDefinition) {
			listener.enterLayoutDefinition(this);
		}
	}
	// @Override
	public exitRule(listener: BlendReactListener): void {
		if (listener.exitLayoutDefinition) {
			listener.exitLayoutDefinition(this);
		}
	}
}


export class PageDefinitionContext extends ParserRuleContext {
	public CAPITAL_IDENTIFIER(): TerminalNode[];
	public CAPITAL_IDENTIFIER(i: number): TerminalNode;
	public CAPITAL_IDENTIFIER(i?: number): TerminalNode | TerminalNode[] {
		if (i === undefined) {
			return this.getTokens(BlendReactParser.CAPITAL_IDENTIFIER);
		} else {
			return this.getToken(BlendReactParser.CAPITAL_IDENTIFIER, i);
		}
	}
	public PATH_IDENTIFIER(): TerminalNode { return this.getToken(BlendReactParser.PATH_IDENTIFIER, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return BlendReactParser.RULE_pageDefinition; }
	// @Override
	public enterRule(listener: BlendReactListener): void {
		if (listener.enterPageDefinition) {
			listener.enterPageDefinition(this);
		}
	}
	// @Override
	public exitRule(listener: BlendReactListener): void {
		if (listener.exitPageDefinition) {
			listener.exitPageDefinition(this);
		}
	}
}


